GL/concurrent-systems-exercises/03_streaming/distributed-store/deploy/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: distributed-store-app
  namespace: concsys-22-usr-simon-barras
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
  selector:
    app: distributed-store-app
